welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:10: error: value ot is not a member of Int
  for (k <- 1 ot i) {
              ^